# LucidaEngine

./: .gitignore  .gitmodules  CMakeLists.txt  lucida.json
include/lucida/: core.h  lucida.h  renderer.h  window.h
src/: lucida.cpp  lucida.h  main.cpp  renderer.cpp  renderer.h  utils.cpp  utils.h  window.cpp  window.h
src/config/: lucida_config.cpp  lucida_config.h
src/core/: context.h  log.h
src/core/config/: config.cpp  config.h
src/core/renderer/: device.cpp  device.h  renderer.cpp  renderer.h  swapchain.cpp  swapchain.h
src/core/window/: window.cpp  window.h
src/debug/: log.h
src/engine/: engine.cpp  engine.h
src/graphics/: device.cpp  pipeline.cpp  pipeline.h  pipeline_builder.cpp  pipeline_builder.h  renderer.cpp  renderer.h  shader.cpp  shader.h  swapchain.cpp  swapchain.h  vertex.cpp  vertex.h
src/renderer/: renderer.cpp  renderer.h
src/shaders/: compile.bat  test.vert
src/window/: window.cpp  window.h
